# YieldProphet

./: main.py  pyproject.toml
src/core/: data_load.py  model.py  pydantic_models.py
src/notebooks/: yfinance.ipynb
