[project]
name = "yieldprophet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "prophet>=1.3.0",
    "tqdm>=4.67.3",
    "yfinance>=1.3.0",
]
